<resources>
    <string name="app_name">Bicycle Rental</string>

    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="welcome_register_to_continue">Welcome, \nRegister to Continue</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>